Fix recent works mobile alignment

--- a/style.css
+++ b/style.css
@@ -219,9 +219,9 @@ margin-left: -2px;
   padding: 0 0;
   position: absolute;
   width: 100%;
-  height: 3455px;
+  height: 2755px;
   left: 0;
-  top: 80%;
+  top: 755px;
 }
 
 .recent-works .title-container {
@@ -232,8 +232,10 @@ margin-left: -2px;
   width: 100%;
   height: 3rem;
   flex: none;
+  padding-top: 50px;
   order: 0;
   flex-grow: 0;
+  text-align: center;
   margin: auto;
   justify-content: center;
 }
@@ -249,13 +251,14 @@ margin-left: -2px;
   display: flex;
   align-items: center;
   color: #1c1a19;
+  text-align: center;
   flex: none;
   order: 0;
   flex-grow: 0;
 }
 
 .recent-works .title-container hr {
-  height: 0;
+margin-top: -10px;
   border: 1px solid #212121;
   flex: none;
   order: 1;
@@ -334,13 +337,13 @@ margin-left: -2px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0;
   gap: 24px;
   width: 100%;
   height: fit-content;
   flex: none;
   order: 1;
   flex-grow: 0;
+  margin-top: 60px;
 }
 
 .frame-43 .right-block {
